Проверить две строчки на идентичность. [#273008]